--- a/sass/style.scss
+++ b/sass/style.scss
@@ -102,7 +102,7 @@ li {
 
 }
 
-// vars
+// Info Button Animation
 $color: #fff;   // icon color
 $animation: 0.2s;   // animation speed
 $scale: 1;    // icon scale 68/68 default
@@ -110,6 +110,7 @@ $scale: 1;    // icon scale 68/68 default
 .hamburglar {
     @include border-radius(15px);
     background: #000;
+    cursor: pointer;
     display: block;
     height: 30px;
     position: fixed;
@@ -117,12 +118,11 @@ $scale: 1;    // icon scale 68/68 default
     top: 10px;
     transform: scale($scale);
     width: 30px;
-    z-index: 1000;
+    z-index: 10000;
 }
 
 
 // All good burgers need filling!
-
 .burger-icon {
     position: absolute;
     height: 30px;
@@ -144,18 +144,27 @@ $scale: 1;    // icon scale 68/68 default
     width: 12px;
     background: $color;
 }
+
 .burger-bun-top {
     width: 4px;
 }
 
+//transform origin
+@mixin transform-origin ($origin) {
+    moz-transform-origin: $origin;
+    -o-transform-origin: $origin;
+    -ms-transform-origin: $origin;
+    -webkit-transform-origin: $origin;
+    transform-origin: $origin;
+}
+
+
 .burger-bun-top {
-    top: 3px;
-    transform-origin: 2px 5px;
+    @include transform-origin(2px 5px);
 }
 
 .burger-bun-bot {
-    bottom: 2px;
-    transform-origin: 14px 3px;
+    @include transform-origin(14.6px 2.2px);
 }
 
 // bun animations 
@@ -163,142 +172,128 @@ $scale: 1;    // icon scale 68/68 default
     .burger-bun-top {
         @include animation(bun-top-out $animation linear normal);
         @include animation-fill-mode(forwards);
-/*
-        animation: bun-top-out $animation linear normal;
-        animation-fill-mode:forwards;
-*/
     }
     .burger-bun-bot {
         @include animation(bun-bot-out $animation linear normal);
         @include animation-fill-mode(forwards);
-/*
-        animation: bun-bot-out $animation linear normal;
-        animation-fill-mode:forwards;
-*/
     }
 }
 .hamburglar.is-closed {
     .burger-bun-top {
         @include animation(bun-top-in $animation linear normal);
         @include animation-fill-mode(forwards);
-/*
-        animation: bun-top-in $animation linear normal;
-        animation-fill-mode:forwards;
-*/
     }
     .burger-bun-bot {
         @include animation(bun-bot-in $animation linear normal);
         @include animation-fill-mode(forwards);
-/*
-        animation: bun-bot-in $animation linear normal;
-        animation-fill-mode:forwards;
-*/
-    }
-}
-
-@include keyframes(bun-top-out) {
-    0% {
-        left: 10px;
-        top: 4px;
-        transform: rotate(90deg);
-    }
-    20% {
-        left: 10px;
-        top: 6px;
-        transform: rotate(75deg);
-    }
-    80% {
-        left: 8px;
-        top: 6px;
-        transform: rotate(60deg);
-    }
-    100% {
-        background-color: #000;
-        left: 6px;
-        top: 7px;
-        width: 20px;
-        @include transition-property(width);
-        transform: rotate(45deg);
-        @include transition-property(background-color);
     }
 }
 
 @include keyframes(bun-top-in) {
     0% {
+        left: 10px;
+        top: 4px;
+        @include rotate (90deg);
+    }
+    20% {
+        left: 10px;
+        top: 6px;
+        @include rotate (75deg);
+    }
+    80% {
+        left: 8px;
+        top: 6px;
+        @include rotate (60deg);
+    }
+    100% {
+        background-color: #000;
+        left: 6px;
+        height: 3px;
+        top: 8px;
+        width: 16px;
+        @include rotate (45deg);
+        @include transition-property(width);
+        @include transition-property(background-color);
+    }
+}
+
+@include keyframes(bun-top-out) {
+    0% {
         left: 6px;
         top: 7px;
         width: 20px;
         @include transition-property(width);
-        transform: rotate(45deg);
+        @include rotate (45deg);
     }
     20% {
         left: 8px;
         top: 6px;
-        transform: rotate(60deg);
+        @include rotate (60deg);
     }
     80% {
         left: 10px;
         top: 6px;
-        transform: rotate(75deg);
+        @include rotate (75deg);
     }
     100% {
         background-color: #fff;
         left: 10px;
         top: 4px;
-        transform: rotate(90deg);
-        @include transition-property(background-color);
-    }
-}
-
-@include keyframes(bun-bot-out) {
-    0% {
-        left: 0px;
-        bottom: 2px;
-        width: 12px;
-        transform: rotate(90deg);
-        @include transition-property(width);
-    }
-    20% {
-        left: -2px;
-        width: 15px;
-        transform: rotate(105deg);
-        @include transition-property(width);
-    }
-    80% {
-        left: -2px;
-        width: 18px;
-        transform: rotate(120deg);
-        @include transition-property(width);
-    }
-    100% {
-        background-color: #000;
-        left: -2px;
-        bottom: 11px;
-        width: 20px;
-        transform: rotate(135deg);
-        @include transition-property(width);
+        @include rotate (90deg);
         @include transition-property(background-color);
     }
 }
 
 @include keyframes(bun-bot-in) {
     0% {
+        left: 0px;
+        bottom: 2px;
+        width: 12px;
+        @include rotate (90deg);
+        @include transition-property(width);
+    }
+    20% {
+        left: -2px;
+        width: 15px;
+        @include rotate (105deg);
+        @include transition-property(width);
+    }
+    80% {
+        left: -2px;
+        width: 18px;
+        @include rotate (120deg);
+        @include transition-property(width);
+    }
+    100% {
+        background-color: #000;
+        height: 3px;
+        left: -5px;
+        bottom: 10px;
+        width: 16px;
+        @include rotate (135deg);
+        @include transition-property(width);
+        @include transition-property(background-color);
+    }
+}
+
+@include keyframes(bun-bot-out) {
+    0% {
         left: -2px;
         bottom: 11px;
         width: 20px;
-        transform: rotate(135deg);
+        @include rotate (135deg);
         @include transition-property(width);
     }
     20% {
         left: -2px;
         width: 18px;
-        transform: rotate(120deg);
+        @include rotate (120deg);
         @include transition-property(width);
     }
     80% {
         left: -2px;
         width: 15px;
-        transform: rotate(105deg);
+        @include rotate (105deg);
         @include transition-property(width);
     }
     100% {
@@ -306,7 +301,7 @@ $scale: 1;    // icon scale 68/68 default
         left: 0px;
         bottom: 2px;
         width: 12px;
-        transform: rotate(90deg);
+        @include rotate (90deg);
         @include transition-property(width);
         @include transition-property(background-color);
     }
@@ -318,21 +313,12 @@ $scale: 1;    // icon scale 68/68 default
     height: 100%;
     left: 0;
     opacity: 0;
-/*     padding: 40px; */
     position: absolute;
     top: 0;
     width: 100%;
     visibility: hidden;
     z-index: 1000;
-    
-    #aboutFrame {
-        height: 100%;
-        margin: auto;
-        position: relative;
-        width: 100%;
-        z-index: 0;
-    }
-    
+
     h3 {
         @extend %fjalla;
         color: #fff;
@@ -344,63 +330,6 @@ $scale: 1;    // icon scale 68/68 default
         top: 80px;
     }
 
-    #close {
-        display: block;
-        @include border-radius(15px);
-        background: #fff;
-        cursor: pointer;
-        height: 30px;
-        position: fixed;
-        right: 30px;
-        top: 30px;
-        width: 30px;
-        z-index: 10000;
-
-
-
-        .btnClose {
-            cursor: pointer;
-            height: 30px;
-            position: absolute;
-            right: 0;
-            top: 0;
-            width: 30px;
-
-            .line {
-                background: #000;
-                display: block;
-                height: 3px;
-                position: absolute;
-                width: 16px;
-                @include transition(all 0.3s ease-in-out);
-            }
-
-            .line:nth-child(1),
-            .line:nth-child(2) {
-                left: 7px;
-                top: 14px;
-            }
-
-            .line:nth-child(1) {
-                @include transform(rotate(45deg));
-            }
-            
-            .line:nth-child(2) {
-                @include transform(rotate(-45deg));
-            }
-        }
-
-        .btnClose:hover {
-            .line:nth-child(1) {
-                @include transform(rotate(225deg));
-            }
-            
-            .line:nth-child(2) {
-                @include transform(rotate(135deg));
-            }
-        }
-    }
-    
     .aboutContents {
         background: url(../images/aboutBg.jpg) no-repeat center center fixed;
         bottom: 0;
@@ -434,13 +363,6 @@ $scale: 1;    // icon scale 68/68 default
             }
         
         }
-        
-        
-/*
-        .bubbleChat {
-            opacity: 0;
-        }
-*/
 
         .bubbleYuriy,
         .bubbleMasato {
